# GDF

./: .gitignore  CMakeLists.txt  __game_of_life.frag  game_of_life.frag  input.cpp  input.h  main.cpp  quad.cpp  quad.h  render.cpp  render.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex_shader.vert  window.cpp  window.h
